Colab을 통해 생성됨

--- a/Chap05_01_Graph.ipynb
+++ b/Chap05_01_Graph.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOvU1n1BxNpMm4yeaCXcNhg",
+      "authorship_tag": "ABX9TyPUiRvu2WKhI32cIpUCY09x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "nyneX0cM4FMt"
       },
@@ -68,7 +68,7 @@
         "id": "Xt8hb-BvZDlK",
         "outputId": "41b544d6-df66-4109-9677-84072ce9db38"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,7 +98,7 @@
       "metadata": {
         "id": "Q_JFq6i3ZsLx"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
         "id": "jnedPheiZNOF",
         "outputId": "c34cad75-774e-436e-9cc4-ecb9fc45923d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +163,7 @@
         "id": "srILFLC8aQdk",
         "outputId": "b6c15ad0-fc70-47ca-898c-b6c62624f3db"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +225,7 @@
         "id": "eymx8fhwdDwn",
         "outputId": "dac06321-1045-4d49-a99c-c6bbe2b861e2"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -242,10 +242,111 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#### Self BackWard"
+      ],
+      "metadata": {
+        "id": "mlQaTcn9GNMa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#!/usr/bin/env python3\n",
+        "# -*- coding: utf-8 -*-\n",
+        "\"\"\"\n",
+        "Created on Tue Jun 10 10:22:52 2025\n",
+        "\n",
+        "@author: hwanghyojun\n",
+        "\"\"\"\n",
+        "\n",
+        "import numpy as np\n",
+        "\n",
+        "class add_function:\n",
+        "    def __init__(self):\n",
+        "        pass\n",
+        "    def forward(self, x, y):\n",
+        "        out = x + y\n",
+        "        return out\n",
+        "    def backward(self, dout):\n",
+        "        out = dout * 1\n",
+        "        return out\n",
+        "\n",
+        "class mult_function:\n",
+        "    def __init__(self):\n",
+        "        self.x = None\n",
+        "        self.y = None\n",
+        "    def forward(self, x, y):\n",
+        "        self.x = x\n",
+        "        self.y = y\n",
+        "        out = x * y\n",
+        "        return out\n",
+        "    def backward(self, dout):\n",
+        "        dx = dout * self.y\n",
+        "        dy = dout * self.x\n",
+        "        return dx, dy\n",
+        "\n",
+        "\n",
+        "mult_apple = mult_function()\n",
+        "mult_orange = mult_function()\n",
+        "add_fruit = add_function()\n",
+        "mult_tax = mult_function()\n",
+        "\n",
+        "apple_num = 2\n",
+        "apple_price = 100\n",
+        "orange_num = 3\n",
+        "orange_price = 150\n",
+        "tax = 1.1\n",
+        "\n",
+        "#forward\n",
+        "out_mult_apple = mult_apple.forward(apple_num, apple_price)\n",
+        "out_mult_orange = mult_orange.forward(orange_num, orange_price)\n",
+        "\n",
+        "out_add_fruit = add_fruit.forward(out_mult_apple, out_mult_orange)\n",
+        "mult_tax.forward(out_add_fruit, tax)\n",
+        "\n",
+        "#Backward\n",
+        "dprice = 1\n",
+        "B_add_fruit, B_tax = mult_tax.backward(dprice)\n",
+        "BB_add_fruit = add_fruit.backward(B_add_fruit)\n",
+        "B_apple_num, B_apple_price = mult_apple.backward(BB_add_fruit)\n",
+        "B_orange_num, B_orange_price = mult_orange.backward(BB_add_fruit)\n",
+        "\n",
+        "print(\"Apple Num BP :\", B_apple_num)\n",
+        "print(\"Apple price BP :\", B_apple_price)\n",
+        "print(\"Orange Num BP :\", B_orange_num)\n",
+        "print(\"Orange price BP :\", B_orange_price)\n",
+        "print(\"tax BP :\", B_tax)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "JeiVDkyWgein",
+        "outputId": "3e4de801-0e5d-4603-bfd4-e4db817a0da7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Apple Num BP : 110.00000000000001\n",
+            "Apple price BP : 2.2\n",
+            "Orange Num BP : 165.0\n",
+            "Orange price BP : 3.3000000000000003\n",
+            "tax BP : 650\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "JeiVDkyWgein"
+        "id": "n1IaHuBYGgdJ"
       },
       "execution_count": null,
       "outputs": []
