Colab을 통해 생성됨

--- a/Chap05_02_Affine_BackPropagation.ipynb
+++ b/Chap05_02_Affine_BackPropagation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO0s5Iz8Cq9+J8rRfiS1Xc2",
+      "authorship_tag": "ABX9TyNAlFFDQSkirSy1ICEqoysK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "####BackPropagation"
+        "###BackPropagation"
       ],
       "metadata": {
         "id": "5f-I2Mn7Nbl7"
@@ -74,7 +74,109 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4d Tensor까지 생각한 Affine!"
+        "### Affine"
+      ],
+      "metadata": {
+        "id": "M1RSCmFSyijE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "class affine:\n",
+        "  def __init__(self,W,b):\n",
+        "    self.W = W\n",
+        "    self.b = b\n",
+        "\n",
+        "  def forward(self, x):\n",
+        "    self.x = x\n",
+        "    return np.dot(x,self.W) + self.b\n",
+        "\n",
+        "  def backward(self, dout):\n",
+        "    dx = np.dot(dout, self.x.T)\n",
+        "    self.dW = np.dot(self.W.T, dout)\n",
+        "    self.db = np.sum(dout, axis=0)\n",
+        "    return dx"
+      ],
+      "metadata": {
+        "id": "RqOvq41fdmZL"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Axis = 1, Axis = 0 Confuse\n",
+        "\n",
+        "\n",
+        "| 함수                     | `axis=0`                        | `axis=1`                     |\n",
+        "| ---------------------- | ------------------------------- | ---------------------------- |\n",
+        "| `np.sum(X, axis=0)`    | **열(column)** 기준으로 합 (세로 방향 연산) | **행(row)** 기준으로 합 (가로 방향 연산) |\n",
+        "| `np.argmax(X, axis=0)` | 열(column)마다 가장 큰 값의 **행 인덱스**   | 행(row)마다 가장 큰 값의 **열 인덱스**   |\n"
+      ],
+      "metadata": {
+        "id": "nBFPWOw0nPl1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Self ?"
+      ],
+      "metadata": {
+        "id": "9eAhDsPgtPNC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class LearnSelf:\n",
+        "  def test(self, x, t):\n",
+        "    self.x = None # backward에서 활용시 오류 안남, IDE때문에\n",
+        "    self.t = t    # 추후 backward에서 활용하려고 저장."
+      ],
+      "metadata": {
+        "id": "3f9YrTwOp-Uy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "| 구분                  | self로 저장   | 그냥 return |\n",
+        "| ------------------- | ---------- | --------- |\n",
+        "| 다른 메서드에서도 써야 함      | ✅ self로 저장 | ❌         |\n",
+        "| 파라미터 업데이트 등 나중에 쓸 값 | ✅ self로 저장 | ❌         |\n",
+        "| 단지 다음 layer로 넘겨주는 값 | ❌          | ✅ return  |\n"
+      ],
+      "metadata": {
+        "id": "tVdJ3yDAt00r"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "self.dW, self.db로 저장해놓은 이유는 parameter의 업데이트 떄문!\n",
+        "\n",
+        "```\n",
+        "dw -= lr * dw\n",
+        "db -= lr * db\n",
+        "```\n",
+        "gradient descent활용시 parameter 계속 업데이트 해야해서\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "_5ZG3te3vx4s"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 4d Tensor까지 생각한 Affine!"
       ],
       "metadata": {
         "id": "QONydTXbn9Id"
@@ -96,8 +198,9 @@
         "    self.dW = None\n",
         "\n",
         "  def forward(self, x):\n",
+        "    # tensor 대응\n",
         "    self.original_x_shape = x.shape\n",
-        "    x = x.reshape(x.shape[0], -1)\n",
+        "    x = x.reshape(x.shape[0], -1) # tensor만 대응하기에 vector를 쓸 수 없다!\n",
         "    self.x = x\n",
         "\n",
         "    out = np.dot(self.x, self.W) + self.b\n",
@@ -107,35 +210,146 @@
         "    self.dW = np.dot(self.x.T, dout)\n",
         "    self.db = np.sum(dout, axis=0)\n",
         "\n",
-        "    dx = dx.reshape(*self.original_x_shape)\n",
+        "    dx = dx.reshape(* self.original_x_shape) #무시\n",
         "    return dx"
       ],
       "metadata": {
         "id": "sHtVBdwohnek"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.array([[1,1]]) #(1,2) 행렬로 써줘야지 에러가 안남! (2,)로 vector로 쓰면 에러남!\n",
+        "W = np.array([[1,2,3],[4,5,6]])\n",
+        "b = np.array([7,8,9])\n",
+        "\n",
+        "gichul = Affine(W,b)\n",
+        "\n",
+        "print(gichul.forward(x)) # => Y의 결과\n",
+        "print(gichul.backward(np.array([[2,1,-1]]))) #=> (3,) vector로 쓰면 에러남!"
+      ],
+      "metadata": {
+        "id": "ojOKUrkdyzFP",
+        "outputId": "a0f8a3c9-d1c8-43d0-a331-ceda476b89a7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[12 15 18]]\n",
+            "[[1 7]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# (3,) vector로 활용하면 에러!\n",
+        "print(gichul.backward(np.array([2,1,-1])))"
+      ],
+      "metadata": {
+        "id": "Hgk3ohCfzo6g",
+        "outputId": "a7e6a48a-5c14-4019-9dc2-3abb06296745",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 280
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "shapes (2,1) and (3,) not aligned: 1 (dim 1) != 3 (dim 0)",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-14-8fb6503daee4>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# (3,) vector로 활용하면 에러!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgichul\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-5-69c13f331c08>\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, dout)\u001b[0m\n\u001b[1;32m     21\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0mdx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mW\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdW\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mT\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: shapes (2,1) and (3,) not aligned: 1 (dim 1) != 3 (dim 0)"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"dW \\n\", gichul.dW)\n",
+        "print(\"db \\n \", gichul.db)"
+      ],
+      "metadata": {
+        "id": "wWx_1n9az0th",
+        "outputId": "a5a16918-2057-4634-a5e3-41a65a9b8261",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dW \n",
+            " [[ 2  1 -1]\n",
+            " [ 2  1 -1]]\n",
+            "db \n",
+            "  [ 2  1 -1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(gichul.dx) #error No set the self.dx"
+      ],
+      "metadata": {
+        "id": "4XBmTPo9y1oQ",
+        "outputId": "6751b613-e530-4977-eb6e-6eeee8eca122",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'Affine' object has no attribute 'dx'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-2b4952813541>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgichul\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdx\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#error No set the self.dx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Affine' object has no attribute 'dx'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Axis = 1, Axis = 0 Confuse\n",
-        "\n",
-        "\n",
-        "| 함수                     | `axis=0`                        | `axis=1`                     |\n",
-        "| ---------------------- | ------------------------------- | ---------------------------- |\n",
-        "| `np.sum(X, axis=0)`    | **열(column)** 기준으로 합 (세로 방향 연산) | **행(row)** 기준으로 합 (가로 방향 연산) |\n",
-        "| `np.argmax(X, axis=0)` | 열(column)마다 가장 큰 값의 **행 인덱스**   | 행(row)마다 가장 큰 값의 **열 인덱스**   |\n"
+        "=> dx는 지역변수로만 활용했기 때문에 instance에서 불러올 수 없음!"
       ],
       "metadata": {
-        "id": "nBFPWOw0nPl1"
+        "id": "NhW95EsM0aSY"
       }
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "RqOvq41fdmZL"
+        "id": "hcCNuGdCz34M"
       },
       "execution_count": null,
       "outputs": []
