Colab을 통해 생성됨

--- a/Chap05_05_Learn_Implement_from_Back_Propagation.ipynb
+++ b/Chap05_05_Learn_Implement_from_Back_Propagation.ipynb
@@ -8,7 +8,7 @@
         "NdmZnK-m2Jgu"
       ],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO7IiaOHI/bWHNZpuoQ1pM4",
+      "authorship_tag": "ABX9TyO9GbhD9Uw0Mp4ev8tZsp4U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,10 +110,23 @@
         "    return grad"
       ],
       "metadata": {
-        "id": "Kr-l8Vlhp14C"
+        "id": "Kr-l8Vlhp14C",
+        "outputId": "d33e8f35-b42b-4fa6-bfdc-d698599b1971",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+            "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -199,7 +212,7 @@
       "metadata": {
         "id": "vtw0IAx4vIy0"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -276,23 +289,22 @@
         "    dout = 1\n",
         "    dout = self.lastlayer.backward(dout)\n",
         "\n",
-        "    layers= list(self.layers.values())\n",
-        "    layers.reverse()\n",
+        "    layers= list(self.layers.values()) # set the List Values of Layers [Affine1, Relu1, Affine2]\n",
+        "    layers.reverse() # Reverse Layers [Affine2, Relu1, Affine1]\n",
         "    for layer in layers:\n",
         "      dout = layer.backward(dout)\n",
         "\n",
         "    grads={}\n",
-        "    grads['W1'] = self.layers['Affine1'].dW\n",
-        "    grads['b1'] = self.layers['Affine1'].db\n",
-        "    grads['W2'] = self.layers['Affine2'].dW\n",
-        "    grads['b2'] = self.layers['Affine2'].db\n",
+        "    grads['W1'], grads['b1'] = self.layers['Affine1'].dW, self.layers['Affine1'].db\n",
+        "    grads['W2'], grads['b2'] = self.layers['Affine2'].dW, self.layers['Affine2'].db\n",
+        "    #dW, db는 각각 Weight gradient, bias gradient!\n",
         "\n",
         "    return grads"
       ],
       "metadata": {
         "id": "cd8v8rTZsA8u"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -340,15 +352,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mmI-vJKCr--y",
-        "outputId": "79c27e77-d89f-4c85-d49a-f393d5c898da"
+        "outputId": "e95e489b-3479-4660-d9f2-e7c1c9492005"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "odict_values([<__main__.Affine object at 0x7ee6b792c610>, <__main__.Relu object at 0x7ee61fde6250>, <__main__.Affine object at 0x7ee61dcebd50>])\n",
+            "odict_values([<__main__.Affine object at 0x7c937c954fd0>, <__main__.Relu object at 0x7c936fe55810>, <__main__.Affine object at 0x7c9407730250>])\n",
             "odict_keys(['Affine1', 'Relu1', 'Affine2'])\n"
           ]
         }
@@ -399,9 +411,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "24876FfJubTD",
-        "outputId": "36e01993-e6c3-4aac-9338-bdf8f977f50a"
+        "outputId": "c6e31c36-c88d-446f-b2a6-b5e9ed624e75"
       },
-      "execution_count": 29,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,12 +452,12 @@
       ],
       "metadata": {
         "id": "IBAsm0a_5Jvj",
-        "outputId": "6c28b4cf-a195-40c7-a2f8-b3d0d993a5a6",
+        "outputId": "7d5b60d0-a9a7-48ad-bfed-6b745d4cb634",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 47,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -470,21 +482,21 @@
       ],
       "metadata": {
         "id": "WfKc3Ge76TPF",
-        "outputId": "2d3634b4-71fe-4800-f75c-161b94e9f0b6",
+        "outputId": "60b47674-c35b-4eb1-b726-c97d7e89d67c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 65,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[ 1.9776202  -0.25600427 -1.36817025 -0.22733047 -0.63424072 -0.42518429\n",
-            "   0.49847332  0.18374765 -0.75034726  1.32520692  0.56891381 -1.72483324\n",
-            "  -1.06671172 -0.69413086 -0.07305124 -0.25223124]]\n",
-            "[np.float64(-0.2522312386238335), np.float64(-0.0730512364608505), np.float64(-0.6941308624572383), np.float64(-1.0667117172743494), np.float64(-1.7248332359901888), np.float64(0.5689138124397569), np.float64(1.3252069186277353), np.float64(-0.7503472632313004), np.float64(0.183747647967861), np.float64(0.4984733159418482), np.float64(-0.42518429364813165), np.float64(-0.63424072131256), np.float64(-0.22733046647076505), np.float64(-1.3681702514498835), np.float64(-0.2560042732484863), np.float64(1.9776202027857355)]\n"
+            "[[ 1.576067    0.43247501 -0.75983999  0.27056541 -0.7475473  -0.26534756\n",
+            "  -0.8437075   2.00347578  0.06418986 -2.31482928 -1.39511087  1.3890572\n",
+            "  -0.50880335 -1.39898744 -1.37577703 -0.60905863]]\n",
+            "[np.float64(-0.6090586271651723), np.float64(-1.3757770295543883), np.float64(-1.398987435058911), np.float64(-0.508803345910038), np.float64(1.3890571989462936), np.float64(-1.3951108671428054), np.float64(-2.3148292769278904), np.float64(0.06418985947408862), np.float64(2.003475781163991), np.float64(-0.8437075001338964), np.float64(-0.265347561975454), np.float64(-0.7475472958771879), np.float64(0.27056541330361383), np.float64(-0.7598399925615957), np.float64(0.4324750107194574), np.float64(1.5760669993585656)]\n"
           ]
         }
       ]
@@ -502,7 +514,7 @@
       "metadata": {
         "id": "fw2u9DYUuxdj"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -529,7 +541,7 @@
       "metadata": {
         "id": "dx33J60ADAdB"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     }
   ]
